build: update to Spock 2.0-M2 using new JUnit system and address JDK >= 9 warnings