@@ -37,11 +37,28 @@ dependencies {
     compile 'com.tomgibara.bits:bits:1.0.1'
 
     testCompile 'org.codehaus.groovy:groovy:3.0.1'
-    testCompile 'org.spockframework:spock-core:1.3-groovy-2.5-SNAPSHOT'
+    testCompile 'org.spockframework:spock-core:2.0-M2-groovy-3.0'
     testCompile 'net.trajano.caliper:caliper:1.2.1'
     testCompile 'net.trajano.commons:commons-testing:2.1.0'
     testCompile 'org.yaml:snakeyaml:1.25'
     testCompile 'org.jooq:joor-java-8:0.9.12'
+}
+
+test {
+    /* If in JDK 9 or higher, must mark illegal-access as denied */
+    if (JavaVersion.current() > JavaVersion.VERSION_1_8) {
+        jvmArgs('--illegal-access=deny')
+    }
+
+    useJUnitPlatform()
+
+    afterSuite { desc, result ->
+        if (!desc.parent) {
+            if (result.testCount == 0) {
+                throw new IllegalStateException("No tests were found. Failing the build")
+            }
+        }
+    }
 }
 
 javadoc {
